syntax = "proto3";

package main;

option go_package = "github.com/meshapi/grpc-api-gateway-examples;gen";

message ChatRequest {
  string name = 1;
  string text = 2;
}

message ChatResponse {
  string user = 1;
  string text = 2;
}

service ChatService {
  rpc Chat(stream ChatRequest) returns (stream ChatResponse);
}
